Proyecto VeterinnariaMascota Final

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,6 @@
     </welcome-file-list>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>dark-hive</param-value>
+        <param-value>vader</param-value>
     </context-param>
 </web-app>
