--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.all-themes-1.0.10.jar=E:\\VI_CICLO\\programacion\\all-themes-1.0.10.jar
+file.reference.trontastic-1.0.10.jar=D:\\DATA NIL CARDENAS\\Descargas\\trontastic-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +49,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.primefaces.classpath}:\
-    ${file.reference.all-themes-1.0.10.jar}
+    ${file.reference.all-themes-1.0.10.jar}:\
+    ${file.reference.trontastic-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
